steer obstacle stop

--- a/combined_code/Color_follower_sign (2).ipynb
+++ b/combined_code/Color_follower_sign (2).ipynb
@@ -14,7 +14,7 @@
     "model = torchvision.models.resnet18(pretrained=False)\n",
     "model.fc = torch.nn.Linear(512, 2)\n",
     "\n",
-    "model.load_state_dict(torch.load('best_steering_model_xy.pth'))\n",
+    "model.load_state_dict(torch.load('best_steering_model_xy--PoolTable400.pth'))\n",
     "\n",
     "device = torch.device('cuda')\n",
     "model = model.to(device)\n",
@@ -44,7 +44,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1668cce789594bd5bce292de476fcb82",
+       "model_id": "d106f33116e84e6897b21226a5bdcfc4",
        "version_major": 2,
        "version_minor": 0
       },
@@ -79,7 +79,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "202dddeb46e041338e30b6d8da087284",
+       "model_id": "c8ddccb1ea7c4e4e98a03a5d76d733a9",
        "version_major": 2,
        "version_minor": 0
       },
@@ -93,7 +93,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a228ae6c77614c8abee2255cc0646383",
+       "model_id": "2f4c62a192784285bc10516366129852",
        "version_major": 2,
        "version_minor": 0
       },
@@ -107,7 +107,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f537f11c796b4aae8fe86b6b9f1a784e",
+       "model_id": "9952a153a5f84c47a08a32afe4824734",
        "version_major": 2,
        "version_minor": 0
       },
@@ -121,7 +121,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3beefbab889c446fb10e91600950193d",
+       "model_id": "2f1ce1be6bf94ea5a0a514c3816897c0",
        "version_major": 2,
        "version_minor": 0
       },
@@ -154,7 +154,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e621891a131741b386a2f73ff7413ade",
+       "model_id": "14c82096df6840a284d152b32725c7ec",
        "version_major": 2,
        "version_minor": 0
       },
@@ -168,7 +168,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "55d835e4abf14f34b4338b2a998a37b0",
+       "model_id": "28a6be7585c842d6aa4f537e12e6c49f",
        "version_major": 2,
        "version_minor": 0
       },
@@ -182,7 +182,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b743967da48243b68fd41c85df3f803e",
+       "model_id": "2c5e961460e64b99991b59cec0459e90",
        "version_major": 2,
        "version_minor": 0
       },
@@ -212,7 +212,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "76711f16dd3a4a07ab30f27c8fb3c827",
+       "model_id": "bccd5beeef1b41eea9ed1ce4aa12748e",
        "version_major": 2,
        "version_minor": 0
       },
@@ -231,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -255,7 +255,8 @@
     "    angle_last = angle\n",
     "    \n",
     "    steering_slider.value = pid + steering_bias_slider.value\n",
-    "    \n",
+    "\n",
+    "    image = change['new']\n",
     "    hsv = cv2.cvtColor(image, cv2.COLOR_BGR2HSV) \n",
     "    lower_red1 = np.array([0,127,114]) \n",
     "    upper_red1 = np.array([15,204,166])\n",
@@ -286,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -295,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
