--- a/combined_code/autobus_live--Seeed-Waveshare-steer-obstacle-colors.ipynb
+++ b/combined_code/autobus_live--Seeed-Waveshare-steer-obstacle-colors.ipynb
@@ -16,7 +16,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Mon Aug  3 00:26:29 2020 go\n"
+      "Mon Aug  3 01:28:02 2020 go\n"
      ]
     }
    ],
@@ -60,8 +60,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Mon Aug  3 00:26:47 2020 best_steering_model_xy--PoolTable400.pth ok\n",
-      "Mon Aug  3 00:26:47 2020 ok\n"
+      "Mon Aug  3 01:28:20 2020 best_steering_model_xy--PoolTable400.pth ok\n",
+      "Mon Aug  3 01:28:20 2020 ok\n"
      ]
     }
    ],
@@ -124,8 +124,8 @@
      "output_type": "stream",
      "text": [
       "check network connection\n",
-      "Mon Aug  3 00:26:51 2020 oba_model ok\n",
-      "Mon Aug  3 00:26:51 2020 ok\n"
+      "Mon Aug  3 01:28:25 2020 oba_model ok\n",
+      "Mon Aug  3 01:28:25 2020 ok\n"
      ]
     }
    ],
@@ -181,7 +181,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Mon Aug  3 00:26:51 2020 ok\n"
+      "Mon Aug  3 01:28:25 2020 ok\n"
      ]
     }
    ],
@@ -201,40 +201,50 @@
     "mt = 0\n",
     "frame_cnt = 0\n",
     "interval = 0.1\n",
-    "stutter = 0\n",
-    "steer_debug = False\n",
+    "prob_block_stop = 0.8\n",
     "tt = time.time()\n",
+    "\n",
+    "#debug vars\n",
+    "steer_debug = False\n",
     "fwd_high = 0.4\n",
     "fwd_low = 0.3\n",
     "turn_high = 0.4\n",
     "turn_low = 0.3\n",
+    "stutter = 0\n",
     "stutter_spd = 0.1\n",
-    "prob_block_stop = 0.8\n",
-    "time_last_station = 9000 #always start code with station stopping enabled\n",
-    "leave_station_secs = 60\n",
     "\n",
+    "#station stopping vars\n",
+    "stopped_at_station = False #is it currently stopped at a station\n",
+    "time_left_station = 0 #the time (secs from epoch) it left last station\n",
+    "time_arrived_station = 0 #the time (secs from epoch) that it arrived at a station\n",
+    "station_stop_wait = 30 #stop at station for x secs\n",
+    "leave_station_span = 30 #the timespan (secs) it takes to leave a station (no red in sight)\n",
+    "\n",
+    "#Don't use time.sleep(), seems to break camera and other things\n",
     "#!!!!! Jetbot doing something with new image !!!!!\n",
     "def execute(change):\n",
     "    global angle, angle_last, mt, frame_cnt, tt, steer_debug, interval, accel, stutter, robot\n",
     "    global stutter_spd, prob_block_stop, min_inter, max_inter, fwd_high, fwd_low, turn_high, turn_low\n",
-    "    \n",
-    "    #count images read\n",
-    "    frame_cnt += 1\n",
+    "    global stopped_at_station, time_left_station, time_arrived_station, station_stop_wait, leave_station_span\n",
     "    \n",
     "    #min time interval between each run\n",
     "    if time.time() < tt + interval:\n",
     "        return\n",
     "    tt = time.time()\n",
     "    \n",
-    "    #stutters robot, start-stop motion\n",
-    "    if stutter:\n",
-    "        rlmv = robot.left_motor.value \n",
-    "        rrmv = robot.right_motor.value\n",
-    "        robot.left_motor.value = stutter_spd *mt\n",
-    "        robot.right_motor.value = stutter_spd *mt\n",
-    "        time.sleep(0.1) #stop to get clear image\n",
-    "        robot.left_motor.value = rlmv\n",
-    "        robot.right_motor.value = rrmv\n",
+    "    #count images read\n",
+    "    frame_cnt += 1\n",
+    "    \n",
+    "    #stopped at station\n",
+    "    if stopped_at_station:\n",
+    "        robot.left_motor.value = 0\n",
+    "        robot.right_motor.value = 0\n",
+    "        time_elapsed = time.time() - time_arrived_station\n",
+    "        status_a.value = str(frame_cnt) + \" station stop \" + str(int(time_elapsed)) + \"/\" + str(station_stop_wait) + \" seconds\"\n",
+    "        if time_elapsed > station_stop_wait: #leave station\n",
+    "            stopped_at_station = False\n",
+    "            time_left_station = time.time() #keep track of time since leaving station\n",
+    "        return\n",
     "        \n",
     "    #AAAAA jetbot reads image and makes a obstacle stop decision AAAAA\n",
     "    x = change['new'] \n",
@@ -252,8 +262,41 @@
     "        status_a.value = str(frame_cnt) + \" obstacle stop\"\n",
     "        return\n",
     "    #^^^^^ jetbot finishes obstacle stop decision ^^^^^\n",
-    "        \n",
+    "\n",
     "    #BBBBB jetbot reads image and makes a station stop decision BBBBB\n",
+    "    image = change['new']\n",
+    "    hsv = cv2.cvtColor(image, cv2.COLOR_BGR2HSV) \n",
+    "    lower_red1 = np.array([0,127,114]) \n",
+    "    upper_red1 = np.array([15,204,166])\n",
+    "    lower_red2 = np.array([345,127,114]) \n",
+    "    upper_red2 = np.array([360,204,166])\n",
+    "    mask2 = cv2.inRange(hsv, lower_red2, upper_red2)\n",
+    "    mask1 = cv2.inRange(hsv, lower_red1, upper_red1)\n",
+    "    frac = sum(sum(mask1))/np.size(mask1)\n",
+    "    frac2 = sum(sum(mask2))/np.size(mask2)\n",
+    "    frac = frac+frac2\n",
+    "    frac_slider.value = frac\n",
+    "    #cv2.imshow(\"image\", mask1)\n",
+    "    #if (frac > 0.35):\n",
+    "    #    robot.stop()\n",
+    "    #else:\n",
+    "    #    robot.left_motor.value = max(min(speed_slider.value + steering_slider.value, 1.0), 0.0)\n",
+    "    #    robot.right_motor.value = max(min(speed_slider.value - steering_slider.value, 1.0), 0.0)\n",
+    "           \n",
+    "    #jetbot decides to make a station stop, or not \n",
+    "    if frac > 0.35:\n",
+    "        #dont't get stuck stopping in same station\n",
+    "        #if time since stopping at last station is more than time it takes to leave a station...\n",
+    "        if time.time() - time_left_station > leave_station_span: \n",
+    "            robot.left_motor.value = 0\n",
+    "            robot.right_motor.value = 0\n",
+    "            stopped_at_station = True\n",
+    "            time_arrived_station = time.time()\n",
+    "            return\n",
+    "        \n",
+    "    #^^^^^ jetbot finishes station stop decision ^^^^^\n",
+    "\n",
+    "    #CCCCC jetbot reads image and makes another station stop decision CCCCC\n",
     "    \"\"\"\n",
     "        Purpose:\n",
     "            Detects color of camera frame image.\n",
@@ -407,18 +450,6 @@
     "    # output deteced color value\n",
     "    status_c.value = str(frame_cnt) + \" color detected: \" + color_detected\n",
     "    \n",
-    "    # jetbot decides to make a station stop, or not \n",
-    "    if color_detected == 'red':\n",
-    "        #dont't get stuck stopping in same station\n",
-    "        #if time since stopping at last station is more than time it takes to leave a station...\n",
-    "        if time.time() - time_last_station > leave_station_secs: \n",
-    "            status_a.value = str(frame_cnt) + \" station stop\"\n",
-    "            robot.left_motor.value = 0\n",
-    "            robot.right_motor.value = 0\n",
-    "            for i in range(60): #stop, sleep for x secs, then keep moving\n",
-    "                time.sleep(1) \n",
-    "                status_a.value = str(frame_cnt) + \" station stop \" + i + \" seconds\"\n",
-    "            time_last_station = time.time() #keep track of time since leaving station\n",
     "        \n",
     "    #^^^^^ jetbot made decision based on color function ^^^^^\n",
     "    \n",
@@ -481,8 +512,17 @@
     "#         print(\"No Color Code Detected\")\n",
     "#         break\n",
     "\n",
-    "    #CCCCC jetbot reads image and makes a steering decision CCCCC\n",
-    "    \n",
+    "    #stutters robot, start-stop motion, debug use only\n",
+    "    if stutter:\n",
+    "        rlmv = robot.left_motor.value \n",
+    "        rrmv = robot.right_motor.value\n",
+    "        robot.left_motor.value = stutter_spd *mt\n",
+    "        robot.right_motor.value = stutter_spd *mt\n",
+    "        robot.left_motor.value = rlmv\n",
+    "        robot.right_motor.value = rrmv\n",
+    "\n",
+    "    #DDDDD jetbot reads image and makes a steering decision DDDDD\n",
+    "\n",
     "    image = change['new']\n",
     "    xy = steer_model(steer_preprocess(image)).detach().float().cpu().numpy().flatten()\n",
     "    x = xy[0]\n",
@@ -507,7 +547,7 @@
     "        return\n",
     "        \n",
     "    #xxxxx use AUTOBUS debugging algo xxxxx\n",
-    "    else: \n",
+    "    else:\n",
     "        stutter = 1\n",
     "\n",
     "        left_motor = max(min(speed_slider.value + steering_slider.value, 1.0), 0.0) \n",
@@ -567,7 +607,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Mon Aug  3 00:26:52 2020 ok\n"
+      "Mon Aug  3 01:28:26 2020 ok\n"
      ]
     }
    ],
@@ -619,16 +659,25 @@
     "#angle of the target, but simply a value that is nearly proportional.  When the actual angle is ``0``, this \n",
     "#will be zero, and it will increase / decrease with the actual angle.  \n",
     "#\n",
+    "frac_slider = ipywidgets.FloatSlider(min=-1.0, max=1.0, description='frac')\n",
+    "#display(frac_slider)\n",
+    "#\n",
     "#arrange widgets in UI\n",
     "status_a = ipywidgets.Textarea(value = \"status a\")\n",
     "status_b = ipywidgets.Textarea(value = \"status b\")\n",
     "status_c = ipywidgets.Textarea(value = \"status c\")\n",
-    "sliders = widgets.VBox([speed_gain_slider, steering_gain_slider, steering_dgain_slider, steering_bias_slider,turn_thres])\n",
+    "sliders = widgets.VBox([speed_gain_slider, steering_gain_slider, steering_dgain_slider, steering_bias_slider,turn_thres,frac_slider])\n",
     "buttons = widgets.VBox([run_button,stop_button,camera_button,motor_button,stutter_button])\n",
     "y_sets = ipywidgets.HBox([y_slider,left_slider,right_slider,left_adjusted,right_adjusted])\n",
     "x_sets = widgets.VBox([x_slider, steering_slider, ipywidgets.Label(\"a) action\"), status_a,\n",
     "                       ipywidgets.Label(\"b) obstacle detect\"), status_b, \n",
     "                       ipywidgets.Label(\"c) color detect\"), status_c])\n",
+    "#\n",
+    "steer_debug = False\n",
+    "if not steer_debug: #hide unused controls\n",
+    "    turn_thres.layout.visibility = 'hidden'\n",
+    "    left_adjusted.layout.visibility = 'hidden'\n",
+    "    right_adjusted.layout.visibility = 'hidden'\n",
     "#\n",
     "cam_toggle = 1 #enables/disables camera, may improve performance\n",
     "def toggle_camera():\n",
@@ -676,20 +725,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Mon Aug  3 00:27:37 2020 ok\n"
+      "check camera\n",
+      "Mon Aug  3 01:28:37 2020 ok\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b14f0f14eb884bb4a0f1de6ad17db06a",
+       "model_id": "c7897b23e6094839b1c42f32aad58619",
        "version_major": 2,
        "version_minor": 0
       },
@@ -703,7 +753,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f3abf4f5bc7e452f8822601c076eba68",
+       "model_id": "60f631397b6e46b789ffd0db7d9fc208",
        "version_major": 2,
        "version_minor": 0
       },
@@ -720,16 +770,14 @@
     "try: camera.stop()\n",
     "except: print('check camera')\n",
     "fps = 10\n",
-    "frame_cnt = 0 #reset frame count\n",
     "camera = Camera.instance(width=224, height=224, capture_width=224, capture_height=224, fps=fps)\n",
     "image_widget = widgets.Image(format='jpeg', width=224, height=224)\n",
     "camera_link = traitlets.dlink((camera, 'value'), (image_widget, 'value'), transform=display_xy)\n",
     "camera.start()\n",
-    "#\n",
-    "if not steer_debug: #hide unused controls\n",
-    "    turn_thres.layout.visibility = 'hidden'\n",
-    "    left_adjusted.layout.visibility = 'hidden'\n",
-    "    right_adjusted.layout.visibility = 'hidden'\n",
+    "\n",
+    "#reset vars\n",
+    "frame_cnt = 0 #reset frame count\n",
+    "time_left_station = 0 #the time (secs from epoch) it left last station\n",
     "#\n",
     "#!!!!! adjustable vars !!!!!\n",
     "#!!!!! adjustable vars !!!!!\n",
@@ -740,7 +788,8 @@
     "robot.right_motor.alpha = 1 \n",
     "interval = 1.0/fps #set interval between execute's same as frame rate\n",
     "prob_block_stop = 0.8 #only stop if prob is higher than this\n",
-    "leave_station_secs = 60 #jetbot will not stop at station unless it's been x secs since it's last stop\n",
+    "station_stop_wait = 30 #stop at station for x secs\n",
+    "leave_station_span = 30 #the timespan (secs) it takes to leave a station (no red in sight)\n",
     "#^^^^^ adjustable vars ^^^^^\n",
     "#^^^^^ adjustable vars ^^^^^\n",
     "#^^^^^ adjustable vars ^^^^^\n",
@@ -841,12 +890,23 @@
     "    fwd_high = 0.37\n",
     "    fwd_low = 0.33\n",
     "    interval = 0.1\n",
-    "if not steer_debug: #hide not used controls\n",
+    "if steer_debug:\n",
+    "    turn_thres.layout.visibility = 'visible'\n",
+    "    left_adjusted.layout.visibility = 'visible'\n",
+    "    right_adjusted.layout.visibility = 'visible'\n",
+    "else:\n",
     "    turn_thres.layout.visibility = 'hidden'\n",
     "    left_adjusted.layout.visibility = 'hidden'\n",
     "    right_adjusted.layout.visibility = 'hidden'\n",
     "#^^^^^ steering debug vars ^^^^^ only in effect if steer_debug = True"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
