steer obstacle stop

--- a/files_check.ipynb
+++ b/files_check.ipynb
@@ -10,8 +10,9 @@
      "output_type": "stream",
      "text": [
       "./combined_code/best_steering_model_xy--PoolTable400.pth\n",
+      "./combined_code/best_steering_model_xy--PoolTable400.pth.zip\n",
+      "./combined_code/best_obstacle_model--collision_avoidance_dataset.pth\n",
       "./combined_code/collision_avoidance_dataset.zip\n",
-      "./combined_code/collision_avoidance_dataset.pth\n",
       "./combined_code/road_following_dataset_xy_2020-08-01_14-09-42--PoolTable400.zip\n",
       "./combined_code/best_obstacle_model--NVIDIA.pth\n",
       "./rail_following_waveshare/best_steering_model_xy--PoolTable400.pth\n",
@@ -27,6 +28,7 @@
       "./rail_following_waveshare/__archives__/best_steering_model_xy--TileFloor??.pth\n",
       "./.git/objects/65/680de8b4f12b200351ebd6f97568581e4db066\n",
       "./.git/objects/7f/ea8ebae4b13b3c690b73910fb37395037a2fb2\n",
+      "./.git/objects/2b/4dd770ba02bc4f9bc37fc152bfb31b6e3f394c\n",
       "./.git/objects/35/c3800ce05129001863a6fb8161882adee479c7\n",
       "./.git/objects/93/e7e2067a96b9a248c1ce0973ad3275a90eefcb\n",
       "./.git/objects/cc/593c2c7b5dac81a7a26c03c8057906b8329710\n",
@@ -42,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -59,29 +61,40 @@
      "output_type": "stream",
      "text": [
       ".:\n",
-      "total 100K\n",
-      "-rw-r--r-- 1 jetbot jetbot  42K Jul 30 18:17 files_check.ipynb\n",
+      "total 208K\n",
+      "-rwxr-xr-x 1 jetbot jetbot  88K Aug  2 22:02 camera_overrides.isp\n",
+      "-rw-r--r-- 1 jetbot jetbot  50K Aug  1 23:38 files_check.ipynb\n",
       "-rw-r--r-- 1 jetbot jetbot  22K Jul 27 12:32 GANTT_Autobus_Jul20.xlsx\n",
-      "-rw-r--r-- 1 jetbot jetbot 6.3K Jul 30 19:02 README.md\n",
-      "-rw-r--r-- 1 jetbot jetbot 4.4K Jul 30 11:36 git_push.ipynb\n",
-      "drwxr-xr-x 3 jetbot jetbot 4.0K Aug  1 23:28 combined_code\n",
+      "-rw-r--r-- 1 jetbot jetbot  13K Aug  2 22:02 Camera_overrides.tar.gz\n",
+      "-rw-r--r-- 1 jetbot jetbot 6.4K Aug  2 21:18 README.md\n",
+      "drwxr-xr-x 4 jetbot jetbot 4.0K Aug  3 01:31 combined_code\n",
       "drwxr-xr-x 5 jetbot jetbot 4.0K Aug  1 14:11 rail_following_waveshare\n",
       "-rw-r--r-- 1 jetbot jetbot 3.5K Jul 30 01:39 Report2.md\n",
       "-rw-r--r-- 1 jetbot jetbot 3.0K Jul 27 12:32 Report1.md\n",
+      "-rw-r--r-- 1 jetbot jetbot 2.7K Aug  3 01:33 git_push.ipynb\n",
       "\n",
       "./combined_code:\n",
-      "total 494M\n",
-      "-rw-r--r-- 1 jetbot jetbot 218M Aug  1 22:17 collision_avoidance_dataset.pth\n",
-      "-rw-r--r-- 1 jetbot jetbot 218M Aug  1 22:36 best_obstacle_model--NVIDIA.pth\n",
-      "-rw-r--r-- 1 jetbot jetbot  43M Jul 30 22:37 best_steering_model_xy--PoolTable400.pth\n",
-      "-rw-r--r-- 1 jetbot jetbot 9.5M Aug  1 23:28 road_following_dataset_xy_2020-08-01_14-09-42--PoolTable400.zip\n",
-      "-rw-r--r-- 1 jetbot jetbot 6.4M Aug  1 14:11 collision_avoidance_dataset.zip\n",
-      "-rw-r--r-- 1 jetbot jetbot 336K Aug  1 22:58 autobus_live--Waveshare-steer-obstacle.html\n",
-      "-rw-r--r-- 1 jetbot jetbot  25K Aug  1 23:27 autobus_live--Waveshare-steer-obstacle--sandbox.ipynb\n",
-      "-rw-r--r-- 1 jetbot jetbot  21K Aug  1 22:57 autobus_live--Waveshare-steer-obstacle.ipynb\n",
-      "-rw-r--r-- 1 jetbot jetbot  18K Jul 31 20:04 autobus_live--Waveshare.ipynb\n",
-      "-rw-r--r-- 1 jetbot jetbot 9.5K Aug  1 21:49 collision_avoidance_live_demo.ipynb\n",
-      "-rw-r--r-- 1 jetbot jetbot 2.3K Jul 30 17:40 pseudocode_algo.ipynb\n",
+      "total 534M\n",
+      "-rw-r--r-- 1 jetbot jetbot 218M Aug  1 22:17  best_obstacle_model--collision_avoidance_dataset.pth\n",
+      "-rw-r--r-- 1 jetbot jetbot 218M Aug  1 22:36  best_obstacle_model--NVIDIA.pth\n",
+      "-rw-r--r-- 1 jetbot jetbot  43M Jul 30 22:37  best_steering_model_xy--PoolTable400.pth\n",
+      "-rw-r--r-- 1 jetbot jetbot  40M Aug  2 19:53  best_steering_model_xy--PoolTable400.pth.zip\n",
+      "-rw-r--r-- 1 jetbot jetbot 9.5M Aug  1 23:28  road_following_dataset_xy_2020-08-01_14-09-42--PoolTable400.zip\n",
+      "-rw-r--r-- 1 jetbot jetbot 6.4M Aug  1 14:11  collision_avoidance_dataset.zip\n",
+      "-rw-r--r-- 1 jetbot jetbot  37K Aug  3 01:31  autobus_live--Seeed-Waveshare-steer-obstacle-colors.ipynb\n",
+      "-rw-r--r-- 1 jetbot jetbot  35K Aug  3 00:27  autobus_live--Waveshare-steer-obstacle-colors.ipynb\n",
+      "-rw-r--r-- 1 jetbot jetbot 9.5K Aug  3 00:33 'Color_follower_sign (2).ipynb'\n",
+      "-rw-r--r-- 1 jetbot jetbot 9.5K Aug  3 00:30 'Color_follower_sign (1).ipynb'\n",
+      "-rw-r--r-- 1 jetbot jetbot 9.5K Aug  1 21:49  collision_avoidance_live_demo.ipynb\n",
+      "drwxr-xr-x 3 jetbot jetbot 4.0K Aug  2 22:02  _previous_versions_\n",
+      "-rw-r--r-- 1 jetbot jetbot 2.3K Jul 30 17:40  pseudocode_algo.ipynb\n",
+      "-rw-r--r-- 1 jetbot jetbot  375 Aug  2 20:00  missing_files.md\n",
+      "\n",
+      "./combined_code/_previous_versions_:\n",
+      "total 72K\n",
+      "-rw-r--r-- 1 jetbot jetbot 28K Aug  2 22:02 autobus_live--Waveshare-steer-obstacle-colors-Copy1.ipynb\n",
+      "-rw-r--r-- 1 jetbot jetbot 21K Aug  1 22:57 autobus_live--Waveshare-steer-obstacle.ipynb\n",
+      "-rw-r--r-- 1 jetbot jetbot 18K Jul 31 20:04 autobus_live--Waveshare.ipynb\n",
       "\n",
       "./rail_following_waveshare:\n",
       "total 92M\n",
@@ -531,6 +544,13 @@
    "source": [
     "!ls -lhRS"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
