--- a/git_push.ipynb
+++ b/git_push.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -20,20 +20,10 @@
       "Your branch is up to date with 'origin/master'.\n",
       "\n",
       "Changes not staged for commit:\n",
-      "  (use \"git add/rm <file>...\" to update what will be committed)\n",
+      "  (use \"git add <file>...\" to update what will be committed)\n",
       "  (use \"git checkout -- <file>...\" to discard changes in working directory)\n",
       "\n",
-      "\t\u001b[31mmodified:   combined_code/Color_follower_sign (1).ipynb\u001b[m\n",
-      "\t\u001b[31mmodified:   combined_code/autobus_live--Waveshare-steer-obstacle-colors.ipynb\u001b[m\n",
-      "\t\u001b[31mdeleted:    combined_code/autobus_live--Waveshare-steer-obstacle.ipynb\u001b[m\n",
-      "\t\u001b[31mdeleted:    combined_code/autobus_live--Waveshare.ipynb\u001b[m\n",
-      "\n",
-      "Untracked files:\n",
-      "  (use \"git add <file>...\" to include in what will be committed)\n",
-      "\n",
-      "\t\u001b[31mcombined_code/Color_follower_sign (2).ipynb\u001b[m\n",
-      "\t\u001b[31mcombined_code/_previous_versions_/\u001b[m\n",
-      "\t\u001b[31mcombined_code/autobus_live--Seeed-Waveshare-steer-obstacle-colors.ipynb\u001b[m\n",
+      "\t\u001b[31mmodified:   git_push.ipynb\u001b[m\n",
       "\n",
       "no changes added to commit (use \"git add\" and/or \"git commit -a\")\n"
      ]
@@ -45,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,20 +44,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[master 9f59612] steer obstacle stop\n",
-      " 7 files changed, 2162 insertions(+), 127 deletions(-)\n",
-      " create mode 100644 combined_code/Color_follower_sign (2).ipynb\n",
-      " create mode 100644 combined_code/_previous_versions_/autobus_live--Waveshare-steer-obstacle-colors-Copy1.ipynb\n",
-      " rename combined_code/{ => _previous_versions_}/autobus_live--Waveshare-steer-obstacle.ipynb (100%)\n",
-      " rename combined_code/{ => _previous_versions_}/autobus_live--Waveshare.ipynb (100%)\n",
-      " create mode 100644 combined_code/autobus_live--Seeed-Waveshare-steer-obstacle-colors.ipynb\n"
+      "[master ba38b6a] steer obstacle stop\n",
+      " 1 file changed, 37 insertions(+), 16 deletions(-)\n"
      ]
     }
    ],
@@ -77,27 +62,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Counting objects: 9, done.\n",
+      "Counting objects: 3, done.\n",
       "Delta compression using up to 4 threads.\n",
-      "Compressing objects: 100% (9/9), done.\n",
-      "Writing objects: 100% (9/9), 12.56 KiB | 1.79 MiB/s, done.\n",
-      "Total 9 (delta 7), reused 0 (delta 0)\n",
-      "remote: Resolving deltas: 100% (7/7), completed with 3 local objects.\u001b[K\n",
+      "Compressing objects: 100% (3/3), done.\n",
+      "Writing objects: 100% (3/3), 834 bytes | 834.00 KiB/s, done.\n",
+      "Total 3 (delta 2), reused 0 (delta 0)\n",
+      "remote: Resolving deltas: 100% (2/2), completed with 2 local objects.\u001b[K\n",
       "To https://github.com/loibucket/autobus\n",
-      "   f6c81ee..9f59612  master -> master\n"
+      "   9f59612..ba38b6a  master -> master\n"
      ]
     }
    ],
    "source": [
     "!git push origin master"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
