--- a/git_push.ipynb
+++ b/git_push.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -44,10 +44,12 @@
       "\t\u001b[31mdeleted:    combined_code/Color_follower_sign (1).ipynb\u001b[m\n",
       "\t\u001b[31mdeleted:    combined_code/Color_follower_sign (2).ipynb\u001b[m\n",
       "\t\u001b[31mdeleted:    combined_code/autobus_live--Waveshare-steer-obstacle-colors.ipynb\u001b[m\n",
+      "\t\u001b[31mdeleted:    combined_code/collision_avoidance_dataset.zip\u001b[m\n",
       "\t\u001b[31mdeleted:    combined_code/collision_avoidance_live_demo.ipynb\u001b[m\n",
       "\t\u001b[31mdeleted:    combined_code/pseudocode_algo.ipynb\u001b[m\n",
       "\t\u001b[31mdeleted:    combined_code/road_following_dataset_xy_2020-08-01_14-09-42--PoolTable400.zip\u001b[m\n",
       "\t\u001b[31mmodified:   git_push.ipynb\u001b[m\n",
+      "\t\u001b[31mdeleted:    rail_following_waveshare/best_steering_model_xy--PoolTable400.zip\u001b[m\n",
       "\n",
       "Untracked files:\n",
       "  (use \"git add <file>...\" to include in what will be committed)\n",
@@ -68,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,46 +79,62 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[master aa6def3] steer obstacle stop\n",
-      " 5 files changed, 1202 insertions(+), 149 deletions(-)\n",
-      " create mode 100644 combined_code/_previous_versions_/autobus_live--Seeed-Waveshare-steer-obstacle-colors-Copy1.ipynb\n"
+      "[master 672a83b] combined code\n",
+      " 11 files changed, 382 insertions(+), 13 deletions(-)\n",
+      " rename {combined_code => collision_avoidance}/collision_avoidance_dataset.zip (100%)\n",
+      " rename {combined_code => collision_avoidance}/collision_avoidance_live_demo.ipynb (100%)\n",
+      " create mode 100644 collision_avoidance/train_model.ipynb\n",
+      " rename {combined_code => color_detection}/Color_follower_sign (1).ipynb (100%)\n",
+      " rename {combined_code => color_detection}/Color_follower_sign (2).ipynb (100%)\n",
+      " rename combined_code/{ => _previous_versions_}/autobus_live--Waveshare-steer-obstacle-colors.ipynb (100%)\n",
+      " rename combined_code/{ => _previous_versions_}/pseudocode_algo.ipynb (100%)\n",
+      " create mode 100644 combined_code/best_obstacle_model--NVIDIA.pth.md\n",
+      " delete mode 100644 combined_code/road_following_dataset_xy_2020-08-01_14-09-42--PoolTable400.zip\n",
+      " delete mode 100644 rail_following_waveshare/best_steering_model_xy--PoolTable400.zip\n"
      ]
     }
    ],
    "source": [
-    "!git commit -m \"steer obstacle stop\""
+    "!git commit -m \"combined code\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Counting objects: 8, done.\n",
+      "Counting objects: 10, done.\n",
       "Delta compression using up to 4 threads.\n",
-      "Compressing objects: 100% (8/8), done.\n",
-      "Writing objects: 100% (8/8), 3.54 KiB | 1.18 MiB/s, done.\n",
-      "Total 8 (delta 7), reused 0 (delta 0)\n",
-      "remote: Resolving deltas: 100% (7/7), completed with 7 local objects.\u001b[K\n",
+      "Compressing objects: 100% (10/10), done.\n",
+      "Writing objects: 100% (10/10), 4.16 KiB | 1.39 MiB/s, done.\n",
+      "Total 10 (delta 6), reused 0 (delta 0)\n",
+      "remote: Resolving deltas: 100% (6/6), completed with 5 local objects.\u001b[K\n",
       "To https://github.com/loibucket/autobus\n",
-      "   8779547..aa6def3  master -> master\n"
+      "   aa6def3..672a83b  master -> master\n"
      ]
     }
    ],
    "source": [
     "!git push origin master"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
